Implementado a administração de Pastores Honorários.